Add cleanup method & reorganize a bit

--- a/.gitignore
+++ b/.gitignore
@@ -427,8 +427,8 @@ FodyWeavers.xsd
 *.msm
 *.msp
 
-FNA/*
-FontStashSharp/*
+FNA/
+FontStashSharp/
 
 samples/Mika.Sample.MonoGame/MikaMonoGame.Core/Content
 samples/Mika.Sample.MonoGame/MikaMonoGame.Core/Localization
